igloo-boot: HS 6 Mapping fields / Analyzer / Normalizer