@@ -3,9 +3,6 @@ package org.iglooproject.jpa.more.business.generic.model.search;
 import java.util.List;
 
 import org.apache.lucene.search.SortField;
-
-import com.google.common.collect.ImmutableList;
-
 import org.iglooproject.jpa.business.generic.model.GenericEntity;
 import org.iglooproject.jpa.more.business.sort.ISort;
 import org.iglooproject.jpa.more.business.sort.SortUtils;
@@ -15,7 +12,7 @@ public enum GenericEntitySort implements ISort<SortField> {
 	SCORE {
 		@Override
 		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(SortField.FIELD_SCORE); // Order is irrelevant
+			return List.of(SortField.FIELD_SCORE); // Order is irrelevant
 		}
 		@Override
 		public SortOrder getDefaultOrder() {
@@ -25,11 +22,11 @@ public enum GenericEntitySort implements ISort<SortField> {
 	ID {
 		@Override
 		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-					SortUtils.luceneSortField(
-							this, sortOrder, SortField.Type.LONG,
-							GenericEntity.ID_SORT
-					)
+			return List.of(
+				SortUtils.luceneSortField(
+					this, sortOrder, SortField.Type.LONG,
+					GenericEntity.ID_SORT
+				)
 			);
 		}
 		@Override
@@ -37,11 +34,5 @@ public enum GenericEntitySort implements ISort<SortField> {
 			return SortOrder.DESC;
 		}
 	};
-	
-	@Override
-	public abstract List<SortField> getSortFields(SortOrder sortOrder);
-	
-	@Override
-	public abstract SortOrder getDefaultOrder();
 
 }
