@@ -3,9 +3,6 @@ package org.iglooproject.jpa.more.business.history.search;
 import java.util.List;
 
 import org.apache.lucene.search.SortField;
-
-import com.google.common.collect.ImmutableList;
-
 import org.iglooproject.jpa.business.generic.model.GenericEntity;
 import org.iglooproject.jpa.more.business.history.model.AbstractHistoryLog;
 import org.iglooproject.jpa.more.business.sort.ISort;
@@ -16,11 +13,11 @@ public enum HistoryLogSort implements ISort<SortField> {
 	ID {
 		@Override
 		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-					SortUtils.luceneSortField(
-							this, sortOrder, SortField.Type.LONG,
-							GenericEntity.ID_SORT
-					)
+			return List.of(
+				SortUtils.luceneSortField(
+					this, sortOrder, SortField.Type.LONG,
+					GenericEntity.ID_SORT
+				)
 			);
 		}
 		@Override
@@ -31,15 +28,15 @@ public enum HistoryLogSort implements ISort<SortField> {
 	DATE {
 		@Override
 		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-					SortUtils.luceneSortField(
-							this, sortOrder, SortField.Type.LONG,
-							AbstractHistoryLog.DATE
-					),
-					SortUtils.luceneSortField(
-							this, sortOrder, SortField.Type.LONG,
-							GenericEntity.ID_SORT
-					)
+			return List.of(
+				SortUtils.luceneSortField(
+					this, sortOrder, SortField.Type.LONG,
+					AbstractHistoryLog.DATE
+				),
+				SortUtils.luceneSortField(
+					this, sortOrder, SortField.Type.LONG,
+					GenericEntity.ID_SORT
+				)
 			);
 		}
 		@Override
@@ -48,10 +45,4 @@ public enum HistoryLogSort implements ISort<SortField> {
 		}
 	};
 	
-	@Override
-	public abstract List<SortField> getSortFields(SortOrder sortOrder);
-	
-	@Override
-	public abstract SortOrder getDefaultOrder();
-
 }
